@@ -1,12 +1,11 @@
 # coot_load_modules+gui.py
 
-# Copyright 2004, 2005, 2006 by Bernhard Lohkamp
-# Copyright 2007 by Bernhard Lohkamp, The University of York
-# Copyright 2004, 2005, 2006 by Paul Emsley, The University of York
+# Copyright 2004, 2005, 2006, 2007 by the University of York
+# Author: Bernhard Lohkamp, Paul Emsley
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 2 of the License, or (at
+# the Free Software Foundation; either version 3 of the License, or (at
 # your option) any later version.
 
 # This program is distributed in the hope that it will be useful, but
@@ -16,7 +15,8 @@
 
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc.,  59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+# Foundation, Inc.,  51 Franklin Street, Fifth Floor, Boston, MA
+# 02110-1301, USA
 
 # load coot python modules (including gui s)
 
